trying z-index fix for sidebar

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -148,6 +148,9 @@ width: 800px!important;
   }
 }
 
+.container {
+  z-index: 1;
+}
 .sidebar {
   background-color: white;
   border-radius: 6px;
@@ -155,7 +158,7 @@ width: 800px!important;
   color: #4a4a4a;
   display: block;
   padding-top: 1.25rem;
-  
+  z-index: 0;
   left: 50%;
   position: absolute;
   transform: translate(-50%);  
